@@ -1,5 +1,9 @@
 import gtk
 import gobject
+from logging import getLogger
+log = getLogger(".ObjectSelector")
+
+import ImgManip
 
 class FamilyPreviewFrame(gtk.Frame):
     
@@ -13,15 +17,21 @@ class FamilyPreviewFrame(gtk.Frame):
     def __init__(self,dbstate,label="Preview"):
 	gtk.Frame.__init__(self,label)
 
+        self._dbstate = dbstate
+        
 	align = gtk.Alignment()
 
         # Image
-        image = gtk.Image()
+        self._image_l = gtk.Image()
+        self._image_r = gtk.Image()
 
+        image_box = gtk.HBox()
+        image_box.pack_start(self._image_l)
+        image_box.pack_start(self._image_r)
+                             
         # test image
-        image.set_from_file("../flist.svg")
         image_frame = gtk.Frame()
-        image_frame.add(image)
+        image_frame.add(image_box)
         
         # Text
         label = gtk.Label()
@@ -52,7 +62,38 @@ class FamilyPreviewFrame(gtk.Frame):
 
 	self.add(align)
 
-	
+        self.clear_object()
+
+    def set_object_from_id(self,id):
+        try:
+            family = self._dbstate.db.get_family_from_gramps_id(id)
+
+            image = [self._image_l, self._image_r]
+            image_no = 0
+            for person_handle in (family.get_father_handle(),family.get_mother_handle()):
+                person = self._dbstate.db.get_person_from_handle(person_handle)
+                if not person:
+                    return
+
+                image_list = person.get_media_list()
+                if image_list:
+                    mobj = self._dbstate.db.get_object_from_handle(image_list[0].ref)
+                    if mobj.get_mime_type()[0:5] == "image":
+                        pixbuf = ImgManip.get_thumbnail_image(mobj.get_path())
+                        image[image_no].set_from_pixbuf(pixbuf)
+                        image_no += 1
+                else:
+                    self._image_l.set_from_file("../person.svg")
+                    self._image_r.set_from_file("../person.svg")
+
+        except:
+            log.warn("Failed to generate preview for family", exc_info=True)
+            self.clear_object()
+
+    def clear_object(self):
+        self._image_l.set_from_file("../person.svg")
+        self._image_r.set_from_file("../person.svg")
+
     
 if gtk.pygtk_version < (2,8,0):
     gobject.type_register(FamilyPreviewFrame)
