@@ -1,4 +1,11 @@
 2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
+       * src/ObjectSelector/_FamilyFrame.py, src/ObjectSelector/_FamilyPreviewFrame.py,
+         src/ObjectSelector/_ObjectFrameBase.py, src/ObjectSelector/_ObjectSelectorWindow.py,
+	 src/ObjectSelector/_PersonFrame.py, src/ObjectSelector/_PersonPreviewFrame.py,
+         src/ObjectSelector/_PersonTreeFrame.py src/ObjectSelector/_ObjectSelectorResult.py:
+	object selection and initial preview works for Family and Person
+
+2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/ObjectSelector/_FamilyFrame.py: basic object selection now working
        * src/ObjectSelector/_FamilyTreeFrame.py: basic object selection now working
        * src/ObjectSelector/_ObjectFrameBase.py: basic object selection now working
